name:                flow
version:             0.1.0
synopsis:            Amazon Simple Workflow Service Wrapper.
homepage:            https://github.com/swift-nav/flow
license:             MIT
license-file:        LICENSE
author:              Swift Navigation Inc.
maintainer:          Mark Fine <dev@swiftnav.com>
copyright:           Copyright (C) 2015 Swift Navigation, Inc.
category:            Network, AWS, Cloud, Distributed Computing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

description:
  Flow is a wrapper around Amazon Simple Workflow Service.

source-repository head
  type:              git
  location:          git@github.com:swift-nav/flow.git

library
  exposed-modules:     Network.AWS.SWF.Flow
                     , Network.AWS.SWF.Flow.Types
  other-modules:       Network.AWS.SWF.Flow.Internal
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       amazonka >= 0.3.4
                     , amazonka-swf >= 0.3.4
                     , base >=4.7 && <4.8
                     , conduit >= 1.2.0
                     , exceptions >= 0.8.0
                     , fast-logger >= 2.3.0
                     , http-client >= 0.4.0
                     , http-conduit >= 2.1.0
                     , lens >= 4.7.0
                     , monad-control >= 1.0.0
                     , monad-logger >= 0.3.0
                     , mtl >= 2.2.0
                     , safe >= 0.3.0
                     , text >= 1.2.0
                     , transformers >= 0.4.0
                     , transformers-base >= 0.4.0
                     , unordered-containers >= 0.2.5.0
